samples/_failures_safe/1761125587_a686d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb410c2e.c: In function ‘main’:
./samples/SAFE/__tmp_fb410c2e.c:155:40: error: expected ‘)’ at end of input
  155 |     if (!process_text(&processor, input
      |                      ~                 ^
      |                                        )
./samples/SAFE/__tmp_fb410c2e.c:155:5: error: expected declaration or statement at end of input
  155 |     if (!process_text(&processor, input
      |     ^~
